--- a/index.html
+++ b/index.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Snake Game</title>
+    <title>SnakeGame</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<div class="body">
-    <div id ="board">
-
+    <div class="body">
+        <div id="scoreBox">Score: 0</div>
+        <div id="hiscoreBox">HiScore: 0</div>
+        <div id="board"></div>
     </div>
-</div>
-
-
 </body>
-<script src="/js/index.js"></script>
+<script src="js/index.js"></script>
 </html>
